--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Mock server para a API de alunos",
   "scripts": {
-    "start": "json-server --watch ../mock-data/bd.json --port 3001"
+    "start": "json-server --watch ../mock-data/bd.json --port 3001 --no-cache",
+    "start:readonly": "json-server ../mock-data/bd.json --port 3001 --read-only"
   },
   "dependencies": {
     "json-server": "^0.17.4"
