--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "trabalho-pweb-api",
+  "name": "backend",
+  "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.18.3",
     "mongoose": "^8.0.0"
   },
