--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "backend",
-  "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "node backend/server.js"
+  },
   "dependencies": {
-    "dotenv": "^16.6.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.0.0"
   },
